--- a/style.css
+++ b/style.css
@@ -1,68 +1,47 @@
 h1, h2 {
   font-family: Lato;
 }
+body,html {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 100vw;
+}
+* {
+    box-sizing: border-box;
+}
+
 body{
   --base-color: #333333;
+  --header-color: #163369;
+  --nav-color: #102022;
+  --main-content: #b30c36;
+  --footer-color: #b3650c;
 }
 main{
-  display: grid;
-  color: #ffffff;
-  /* grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 1fr); */
+    min-height: 100vh;
+    min-width: 100vw;
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-template-rows: 100px auto 100px;
+  
 }
 
-.search__area{
-      display: flex;
-    margin: 0 auto;
-    width: 40%;
-    height: 50px;
-    padding: 10px;
-}
-.search__area input {
-width: 35%;
-    flex-grow: 1;
-    padding: 11px;
-    border-radius: 10px;
-    font-size: 18px;
-}
-.todo__item{
-color: #333333;
-display: grid;
-grid-template-columns: 1fr max-content max-content;
-align-items: center;
-grid-gap: 5px;
-}
-.todo__list{
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    padding: 10px 10px;
-    width: 35%;
-    grid-gap: 10px;
-    /* flex-basis: 56%; */
-    border: 2px solid #333333;
-}
-.action__txt{
-border: 3px solid #333333;
-    padding: 10px;
-    font-size: 16px;
-}
-.edit__btn{
-border: 3px solid var(--base-color);
-}
-.delete__btn{
-border: 3px solid var(--base-color);
-}
-
-.box1{
+header{
   background-color: #163369;
+  grid-column: 1/3;
 }
-.box2{
-  background-color: #102022;
+nav{
+  background-color: var(--nav-color);
 }
-.box3{
-  background-color: #b30c36;
+
+section{
+background-color: var(--main-content);
+grid-column: 2/3;
+margin: 8px;
 }
-.box4{
-  background-color: #b3650c;
+
+footer{
+background-color: var(--footer-color);
+grid-column: 1/3;
 }
