--- a/style.css
+++ b/style.css
@@ -23,13 +23,14 @@ main{
     min-height: 100vh;
     min-width: 100vw;
     display: grid;
-    grid-template-columns: minmax(100px, 1fr) 2fr;
+    grid-template-columns: minmax(200px, 350px) 2fr;
     grid-template-rows: 100px auto 100px;
   
 }
 
 header{
   background-color: #163369;
+  color: #fff;
   grid-column: 1/3;
 }
 nav{
@@ -39,7 +40,8 @@ nav{
 
 nav ul{
   list-style: none;
-  font-size: 2em;
+  line-height: 1.8em;
+  font-size: 1em;
 }
 
 nav ul li a{
@@ -50,10 +52,21 @@ nav ul li a{
 section{
 background-color: var(--main-content);
 grid-column: 2/3;
-margin: 8px;
+margin: 5px;
 }
 
 footer{
 background-color: var(--footer-color);
 grid-column: 1/3;
+width: 100%;
+}
+
+footer ul{
+display: flex;
+margin: 0px;
+color: #fff;
+height: 100%;
+justify-content: space-between;
+align-items: center;
+list-style: none;  
 }
